--- a/cloud-movie-k8s.yml
+++ b/cloud-movie-k8s.yml
@@ -5,3 +5,4 @@ spring:
     url: jdbc:mysql://${CLOUD_MOVIE_DB_SERVICE_HOST}:${CLOUD_MOVIE_DB_SERVICE_PORT}/${MYSQL_DATABASE}
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
+name: hjleeid-k8s
